@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-*
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1506,6 +1506,7 @@
    <date>2014-09-05</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] IMAP driver needs to explicitly search for UTF-8 text, since we don&apos;t restrict charset input at the UI level (Bug #13554).
 * [mjr] Fix issues when preferred configuration contains an array (Bug #13548).
    </notes>
   </release>
