@@ -3,10 +3,13 @@ v3.3.0-git
 ----------
 
 
+
 ------
 v3.2.2
 ------
 
+[mms] IMAP driver needs to explicitly search for UTF-8 text, since we don't
+      restrict charset input at the UI level (Bug #13554).
 [mjr] Fix issues when preferred configuration contains an array (Bug #13548).
 
 
